--- a/asteroid-dashboard-react/package.json
+++ b/asteroid-dashboard-react/package.json
@@ -5,12 +5,10 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist --dotfiles",
-    "build": "npm run build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+  "dev": "vite",
+  "build": "vite build", 
+  "lint": "eslint .",
+  "preview": "vite preview"
   },
   "dependencies": {
     "@react-three/drei": "^9.107.2",
